# pyopticon

./: .gitignore  LICENSE  README.md  misc.txt  persistent_logfile.txt  pyproject.toml  readthedocs.yaml  requirements.txt
docs/: capabilities.rst  conf.py  documentation.rst  index.rst  license.rst  overview.rst  pyopticon._system._automation_widget.rst  pyopticon._system._socket_widget.rst  pyopticon.built_in_widgets.spiciness_widget.rst  pyopticon.built_in_widgets.title_widget.rst  pyopticon.generic_serial_emulator.rst  pyopticon.majumdar_lab_widgets.iot_relay_widget.rst  pyopticon.majumdar_lab_widgets.mks_ftir_widget.rst  pyopticon.majumdar_lab_widgets.picarro_crd_widget.rst  pyopticon.majumdar_lab_widgets.valco_2_way_valve_widget.rst  pyopticon.majumdar_lab_widgets.valco_8_way_valve_widget.rst  pyopticon.socket_client.rst  pyopticon.utilities.serial_port_scanner.rst  requirements.txt  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst  tutorial_4.rst
docs/_build/doctrees/: available_widgets.doctree  capabilities.doctree  documentation.doctree  environment.pickle  gallery.doctree  index.doctree  license.doctree  modules.doctree  overview.doctree  pyopticon._system.doctree  (+35 more)
docs/pyopticon/: dashboard.rst  generic_serial_emulator.rst  index.rst
src/: main_dashboard.py  paper_demo.py  script.py  socket_test.py  test_demo.py
src/pyopticon/: __init__.py  dashboard.py  demo_dashboard.py  generic_serial_emulator.py  generic_widget.py  minimal_widget.py  socket_client.py
src/user-created-widgets/: aalborg_dpm_widget.py  mks_ftir_widget.py  thorlabs_opm_widget.py
(+151 files in other folders)
